style fix for image centering on mobile

--- a/app/assets/stylesheets/redesign/pages/pdp/_gallery.scss
+++ b/app/assets/stylesheets/redesign/pages/pdp/_gallery.scss
@@ -58,7 +58,9 @@
 
   .panel-media .media-wrap {
     display: block;
-    max-height: 650px;
+    width: 100%;
+    height: auto;
+    max-height: none;
     padding-top: 0;
 
     &:not(:first-child) {
